- create home page - render components on home page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "CredPal.",
-  "name": "CredPal. Landing Page",
+  "short_name": "CredPal",
+  "name": "CredPal Landing Page",
   "icons": [
     {
       "src": "favicon.ico",
